// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryPreviewLetter passes hideBackLinks to PreviewTemplateFromMessagePlan 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-full"
        >
          <div
            class="nhsuk-u-reading-width"
          >
            <span
              class="nhsuk-caption-l"
            >
              Template
            </span>
            <h1
              data-testid="preview-message__heading"
            >
              letter template name
            </h1>
          </div>
          <div
            class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
          >
            <dl
              class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
            >
              <div
                class="nhsuk-summary-list__row"
              >
                <dt
                  class="nhsuk-summary-list__key"
                >
                  Template ID
                </dt>
                <dd
                  class="nhsuk-summary-list__value monospace-font"
                  data-testid="preview-template-id"
                >
                  letter-template-id
                </dd>
              </div>
              <div
                class="nhsuk-summary-list__row"
              >
                <dt
                  class="nhsuk-summary-list__key"
                >
                  Template type
                </dt>
                <dd
                  class="nhsuk-summary-list__value"
                >
                  Standard letter
                </dd>
              </div>
              <div
                class="nhsuk-summary-list__row"
              >
                <dt
                  class="nhsuk-summary-list__key"
                >
                  Template file
                </dt>
                <dd
                  class="nhsuk-summary-list__value"
                >
                  <div
                    class="container"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="none"
                      height="26"
                      viewBox="0 0 20 26"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                        fill="#4C6272"
                      />
                    </svg>
                    <p
                      class="text"
                    >
                      template.pdf
                    </p>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`SummaryPreviewLetter renders a PDF letter template preview without letterVariant 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <a
      class="nhsuk-back-link"
      data-testid="back-link-top"
      href="/message-plans/choose-standard-english-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34?lockNumber=5"
    >
      Go back
    </a>
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-full"
        >
          <div
            class="nhsuk-u-reading-width"
          >
            <span
              class="nhsuk-caption-l"
            >
              Template
            </span>
            <h1
              data-testid="preview-message__heading"
            >
              letter template name
            </h1>
          </div>
          <div
            class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
          >
            <dl
              class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
            >
              <div
                class="nhsuk-summary-list__row"
              >
                <dt
                  class="nhsuk-summary-list__key"
                >
                  Template ID
                </dt>
                <dd
                  class="nhsuk-summary-list__value monospace-font"
                  data-testid="preview-template-id"
                >
                  letter-template-id
                </dd>
              </div>
              <div
                class="nhsuk-summary-list__row"
              >
                <dt
                  class="nhsuk-summary-list__key"
                >
                  Template type
                </dt>
                <dd
                  class="nhsuk-summary-list__value"
                >
                  Standard letter
                </dd>
              </div>
              <div
                class="nhsuk-summary-list__row"
              >
                <dt
                  class="nhsuk-summary-list__key"
                >
                  Template file
                </dt>
                <dd
                  class="nhsuk-summary-list__value"
                >
                  <div
                    class="container"
                  >
                    <svg
                      aria-hidden="true"
                      class="icon"
                      fill="none"
                      height="26"
                      viewBox="0 0 20 26"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                        fill="#4C6272"
                      />
                    </svg>
                    <p
                      class="text"
                    >
                      template.pdf
                    </p>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
          <a
            class="nhsuk-link nhsuk-body-m nhsuk-u-display-inline-block"
            data-testid="back-link-bottom"
            href="/message-plans/choose-standard-english-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34?lockNumber=5"
          >
            Go back
          </a>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`SummaryPreviewLetter renders an authoring letter template preview with letterVariant 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <a
      class="nhsuk-back-link"
      data-testid="back-link-top"
      href="/message-plans/choose-standard-english-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34?lockNumber=5"
    >
      Go back
    </a>
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-full"
        >
          <div
            class="nhsuk-u-reading-width"
          >
            <span
              class="nhsuk-caption-l"
            >
              Template
            </span>
            <h1
              data-testid="preview-message__heading"
            >
              authoring letter template name
            </h1>
          </div>
          <div
            class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
          >
            <dl
              class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview authoringLetterDetails"
            >
              <div
                class="nhsuk-summary-list__row"
              >
                <dt
                  class="nhsuk-summary-list__key"
                >
                  Template ID
                </dt>
                <dd
                  class="nhsuk-summary-list__value monospace-font"
                  data-testid="preview-template-id"
                >
                  authoring-letter-template-id
                </dd>
                <dd
                  class="nhsuk-summary-list__actions"
                />
              </div>
              <div
                class="nhsuk-summary-list__row"
              >
                <dt
                  class="nhsuk-summary-list__key"
                >
                  Template type
                </dt>
                <dd
                  class="nhsuk-summary-list__value"
                >
                  Standard letter
                </dd>
                <dd
                  class="nhsuk-summary-list__actions"
                />
              </div>
              <div
                class="nhsuk-summary-list__row missing-value"
                id="campaign-id"
              >
                <dt
                  class="nhsuk-summary-list__key"
                >
                  Campaign
                </dt>
                <dd
                  class="nhsuk-summary-list__value"
                />
                <dd
                  aria-hidden="true"
                  class="nhsuk-summary-list__actions"
                />
              </div>
              <div
                class="nhsuk-summary-list__row"
              >
                <dt
                  class="nhsuk-summary-list__key"
                >
                  Total pages
                </dt>
                <dd
                  class="nhsuk-summary-list__value"
                >
                  2
                </dd>
                <dd
                  class="nhsuk-summary-list__actions"
                />
              </div>
              <div
                class="nhsuk-summary-list__row"
              >
                <dt
                  class="nhsuk-summary-list__key"
                >
                  Sheets
                </dt>
                <dd
                  class="nhsuk-summary-list__value"
                >
                  1
                </dd>
                <dd
                  class="nhsuk-summary-list__actions nhsuk-u-padding-right-4"
                >
                  <a
                    data-testid="sheets-action"
                    href="https://notify.nhs.uk/pricing-and-commercial/letters"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more
                    <span
                      class="nhsuk-u-visually-hidden"
                    >
                       about sheets
                    </span>
                  </a>
                </dd>
              </div>
              <div
                class="nhsuk-summary-list__row"
                id="printing-and-postage"
              >
                <dt
                  class="nhsuk-summary-list__key"
                >
                  Printing and postage
                </dt>
                <dd
                  class="nhsuk-summary-list__value"
                >
                  Standard C5
                </dd>
                <dd
                  aria-hidden="true"
                  class="nhsuk-summary-list__actions"
                />
              </div>
            </dl>
          </div>
          <h2
            class="nhsuk-heading-m"
          >
            Example preview
          </h2>
          <iframe
            aria-label="PDF preview of letter template"
            class="letter-render-iframe nhsuk-u-margin-bottom-6"
            src="/templates/files/client-1/renders/authoring-letter-template-id/render.pdf"
            title="Letter preview"
          />
          <a
            class="nhsuk-link nhsuk-body-m nhsuk-u-display-inline-block"
            data-testid="back-link-bottom"
            href="/message-plans/choose-standard-english-letter-template/fbb81055-79b9-4759-ac07-d191ae57be34?lockNumber=5"
          >
            Go back
          </a>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
